# uvc_cam

./: .rosinstall  CMakeLists.txt  README.md  camera menue.txt  manifest.xml  package.xml  test_uvc.launch
cfg/: UVCCam.cfg
include/uvc_cam/: uvc_cam.h
src/: record_theora.cpp  sender.cpp  senderIT.cpp  uvc_cam_node.cpp
src/dump/: avilib.c  dump.cpp  dump_send.cpp
src/uvc_cam/: uvc_cam.cpp
src/view/: view.cpp
